# zxing-bench

./: Cargo.toml  README.md
dotnet/: Program.cs  README.md  dotnet.csproj
python/: README.md  bench.py  requirements.txt
rust/: Cargo.toml  README.md
rust/src/: main.rs
src/: main.rs
