[package]
name = "zxing-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
zxing-cpp = { version = "0.2.1", features = ["bundled", "image"] }
rxing = { version = "0.5.3", features = ["image"] }
zbar-rust = "0.0.23"
