[package]
name = "zxing-bench"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.*"
zxing-cpp = { version = "0.4.1", features = ["bundled", "image"] }
rxing = { version = "0.6.1", features = ["image"] }
zbar-rust = "0.0.24"
