[package]
name = "zxing-bench"
version = "0.1.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.*"
zxing-cpp = { version = "0.5.1", features = ["bundled", "image"] }
# zxing-cpp = { path = "../../zxing-cpp.git/wrappers/rust", features = ["bundled", "image"] }
rxing = { version = "0.8.5", features = ["image"] }
zbar-rust = "0.0.24"
zedbar = "0.2.2"
